[gd_scene load_steps=16 format=3 uid="uid://dbndd8umjeoiq"]

[ext_resource type="Script" uid="uid://bcyvbwsej2e2f" path="res://Scripts/Camera.gd" id="1_xdxat"]
[ext_resource type="FontFile" uid="uid://c3kpo7ovh8rqi" path="res://Assets/Fonts/dogicabold.ttf" id="2_rv08e"]
[ext_resource type="Script" uid="uid://bj5acwg1xsr8q" path="res://Scripts/UI/Calender.gd" id="3_mywko"]
[ext_resource type="PackedScene" uid="uid://dv5u1u046276g" path="res://Objects/UI/Toolbar.tscn" id="4_lqjr5"]

[sub_resource type="LabelSettings" id="LabelSettings_mywko"]
font = ExtResource("2_rv08e")
font_size = 8
font_color = Color(0.266575, 0.266575, 0.266575, 1)

[sub_resource type="LabelSettings" id="LabelSettings_lqjr5"]
font = ExtResource("2_rv08e")
font_size = 8
font_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_y7oh5"]
font = ExtResource("2_rv08e")
font_size = 8
font_color = Color(0.560955, 0.560955, 0.560955, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fpu2u"]
font = ExtResource("2_rv08e")
font_color = Color(0.560784, 0.560784, 0.560784, 1)

[sub_resource type="Gradient" id="Gradient_i0ulm"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.462745, 0.462745, 0.462745, 0.647059)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c8knh"]
gradient = SubResource("Gradient_i0ulm")
width = 46
height = 16

[sub_resource type="LabelSettings" id="LabelSettings_m7k43"]
font = ExtResource("2_rv08e")
font_color = Color(0.266667, 0.266667, 0.266667, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_saw5n"]
gradient = SubResource("Gradient_i0ulm")
width = 46
height = 16

[sub_resource type="LabelSettings" id="LabelSettings_4h5oc"]
font = ExtResource("2_rv08e")
font_color = Color(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_l41fg"]
gradient = SubResource("Gradient_i0ulm")
width = 46
height = 16

[sub_resource type="LabelSettings" id="LabelSettings_i0ulm"]
font = ExtResource("2_rv08e")
font_size = 8
font_color = Color(0.266575, 0.266575, 0.266575, 1)

[node name="Camera" type="Camera2D"]
position = Vector2(30, 7)
limit_left = -2000
limit_top = -1000
limit_right = 2000
limit_bottom = 1000
script = ExtResource("1_xdxat")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerStats" type="ColorRect" parent="UI"]
z_index = 1000
layout_mode = 0
offset_left = -956.0
offset_top = -535.0
offset_right = -767.0
offset_bottom = -491.0
scale = Vector2(2, 2)

[node name="ColorRect" type="ColorRect" parent="UI/PlayerStats"]
z_index = -1
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 190.0
offset_bottom = 45.0
color = Color(0.442911, 0.442911, 0.442911, 1)

[node name="Wealth" type="Label" parent="UI/PlayerStats"]
z_index = 100
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 119.0
offset_bottom = 25.0
text = "Wealth: £1000000"
label_settings = SubResource("LabelSettings_mywko")
autowrap_trim_flags = 0
uppercase = true

[node name="Nameplate" type="Label" parent="UI/PlayerStats"]
z_index = 100
layout_mode = 0
offset_left = 2.0
offset_top = 14.0
offset_right = 118.0
offset_bottom = 30.0
text = "Stations: 1 Trains: 1"
label_settings = SubResource("LabelSettings_lqjr5")
vertical_alignment = 1
autowrap_trim_flags = 0
uppercase = true

[node name="Owner" type="Label" parent="UI/PlayerStats"]
z_index = 100
layout_mode = 0
offset_left = 2.0
offset_top = 31.5
offset_right = 118.0
offset_bottom = 53.5
text = "Player Name"
label_settings = SubResource("LabelSettings_y7oh5")
autowrap_trim_flags = 0
uppercase = true

[node name="Calender" type="Control" parent="UI" groups=["Calender"]]
z_index = -10
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_mywko")

[node name="DateStats" type="ColorRect" parent="UI/Calender"]
z_index = 1000
layout_mode = 0
offset_left = 569.0
offset_top = -529.0
offset_right = 758.0
offset_bottom = -485.0
scale = Vector2(2, 2)

[node name="ColorRect" type="ColorRect" parent="UI/Calender/DateStats"]
z_index = -1
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 190.0
offset_bottom = 45.0
color = Color(0.442911, 0.442911, 0.442911, 1)

[node name="Time" type="Label" parent="UI/Calender/DateStats"]
z_index = 100
layout_mode = 0
offset_top = 3.0
offset_right = 189.0
offset_bottom = 25.0
text = "23:12"
label_settings = SubResource("LabelSettings_mywko")
horizontal_alignment = 1
autowrap_trim_flags = 0
uppercase = true

[node name="Date" type="Label" parent="UI/Calender/DateStats"]
z_index = 100
layout_mode = 0
offset_left = -0.5
offset_top = 13.5
offset_right = 188.5
offset_bottom = 29.5
text = "1st of January 2025"
label_settings = SubResource("LabelSettings_lqjr5")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_trim_flags = 0
uppercase = true

[node name="WeeklyIncome" type="Label" parent="UI/Calender/DateStats"]
z_index = 100
layout_mode = 0
offset_top = 31.0
offset_right = 189.0
offset_bottom = 53.0
text = "WEekly Income: £300000"
label_settings = SubResource("LabelSettings_y7oh5")
horizontal_alignment = 1
autowrap_trim_flags = 0
uppercase = true

[node name="ColorRect" type="ColorRect" parent="UI/Calender"]
layout_mode = 0
offset_left = 857.0
offset_top = 395.0
offset_right = 905.0
offset_bottom = 464.0
scale = Vector2(2, 2)

[node name="ColorRect" type="ColorRect" parent="UI/Calender/ColorRect"]
z_index = -1
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 49.0
offset_bottom = 70.0
color = Color(0.442911, 0.442911, 0.442911, 1)

[node name="SpeedButton1" type="Label" parent="UI/Calender/ColorRect"]
z_index = 10
layout_mode = 0
offset_left = 17.0
offset_top = 18.5
offset_right = 33.0
offset_bottom = 32.5
text = ">"
label_settings = SubResource("LabelSettings_fpu2u")

[node name="ColorRect" type="ColorRect" parent="UI/Calender/ColorRect/SpeedButton1"]
z_index = -2
layout_mode = 0
offset_left = -15.0
offset_right = 29.0
offset_bottom = 14.0

[node name="ColorRect" type="ColorRect" parent="UI/Calender/ColorRect/SpeedButton1/ColorRect"]
z_index = -1
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 45.0
offset_bottom = 15.0
color = Color(0.443137, 0.443137, 0.443137, 1)

[node name="SpeedButton1" type="TextureButton" parent="UI/Calender/ColorRect/SpeedButton1"]
z_index = -1
layout_mode = 0
offset_left = -16.0
offset_top = -1.0
offset_right = 30.5
offset_bottom = 16.0
texture_hover = SubResource("GradientTexture2D_c8knh")

[node name="SpeedButton2" type="Label" parent="UI/Calender/ColorRect"]
z_index = 10
layout_mode = 0
offset_left = 8.0
offset_top = 35.5
offset_right = 40.0
offset_bottom = 49.5
text = ">>"
label_settings = SubResource("LabelSettings_m7k43")

[node name="ColorRect" type="ColorRect" parent="UI/Calender/ColorRect/SpeedButton2"]
z_index = -2
layout_mode = 0
offset_left = -6.0
offset_right = 38.0
offset_bottom = 14.0

[node name="ColorRect" type="ColorRect" parent="UI/Calender/ColorRect/SpeedButton2/ColorRect"]
z_index = -1
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 45.0
offset_bottom = 15.0
color = Color(0.443137, 0.443137, 0.443137, 1)

[node name="SpeedButton2" type="TextureButton" parent="UI/Calender/ColorRect/SpeedButton2"]
z_index = -1
layout_mode = 0
offset_left = -7.0
offset_top = -1.0
offset_right = 39.5
offset_bottom = 16.0
texture_hover = SubResource("GradientTexture2D_saw5n")

[node name="SpeedButton3" type="Label" parent="UI/Calender/ColorRect"]
z_index = 10
layout_mode = 0
offset_top = 52.5
offset_right = 32.0
offset_bottom = 66.5
text = ">>>"
label_settings = SubResource("LabelSettings_4h5oc")

[node name="ColorRect" type="ColorRect" parent="UI/Calender/ColorRect/SpeedButton3"]
z_index = -2
layout_mode = 0
offset_left = 2.0
offset_right = 46.0
offset_bottom = 14.0

[node name="ColorRect" type="ColorRect" parent="UI/Calender/ColorRect/SpeedButton3/ColorRect"]
z_index = -1
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 45.0
offset_bottom = 15.0
color = Color(0.443137, 0.443137, 0.443137, 1)

[node name="SpeedButton3" type="TextureButton" parent="UI/Calender/ColorRect/SpeedButton3"]
z_index = -1
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 47.5
offset_bottom = 16.0
texture_hover = SubResource("GradientTexture2D_l41fg")

[node name="PauseButton" type="Label" parent="UI/Calender/ColorRect"]
z_index = 10
layout_mode = 0
offset_left = 16.5
offset_top = 1.5
offset_right = 48.5
offset_bottom = 15.5
label_settings = SubResource("LabelSettings_fpu2u")

[node name="ColorRect" type="ColorRect" parent="UI/Calender/ColorRect/PauseButton"]
z_index = -2
layout_mode = 0
offset_left = -15.0
offset_right = 29.0
offset_bottom = 14.0

[node name="ColorRect" type="ColorRect" parent="UI/Calender/ColorRect/PauseButton/ColorRect"]
z_index = -1
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 45.0
offset_bottom = 15.0
color = Color(0.443137, 0.443137, 0.443137, 1)

[node name="ColorRect2" type="ColorRect" parent="UI/Calender/ColorRect/PauseButton"]
z_index = -1
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 12.0
offset_bottom = 13.0
color = Color(0.707967, 0.707967, 0.707967, 1)

[node name="ColorRect2" type="ColorRect" parent="UI/Calender/ColorRect/PauseButton/ColorRect2"]
layout_mode = 0
offset_left = 3.0
offset_right = 7.0
offset_bottom = 12.0

[node name="PauseButton" type="TextureButton" parent="UI/Calender/ColorRect/PauseButton"]
z_index = -1
layout_mode = 0
offset_left = -16.0
offset_top = -1.0
offset_right = 31.0
offset_bottom = 16.0
texture_hover = SubResource("GradientTexture2D_c8knh")

[node name="Toolbar" parent="UI" instance=ExtResource("4_lqjr5")]
layout_mode = 0
offset_left = -30.0
offset_top = 2.0
offset_right = -30.0
offset_bottom = 2.0

[node name="NewTrainLabel" type="ColorRect" parent="UI"]
visible = false
z_index = 1000
layout_mode = 0
offset_left = -177.0
offset_top = -532.0
offset_right = -29.5
offset_bottom = -502.0
scale = Vector2(2, 2)

[node name="ColorRect" type="ColorRect" parent="UI/NewTrainLabel"]
z_index = -1
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 148.5
offset_bottom = 31.0
color = Color(0.442911, 0.442911, 0.442911, 1)

[node name="Owner" type="Label" parent="UI/NewTrainLabel"]
z_index = 100
layout_mode = 0
offset_left = 0.5
offset_top = 1.0
offset_right = 153.0
offset_bottom = 28.0
text = "Select one of your stations to place your new train"
label_settings = SubResource("LabelSettings_i0ulm")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
autowrap_trim_flags = 0
uppercase = true

[connection signal="pressed" from="UI/Calender/ColorRect/SpeedButton1/SpeedButton1" to="UI/Calender" method="_on_speed_button_1_pressed"]
[connection signal="pressed" from="UI/Calender/ColorRect/SpeedButton2/SpeedButton2" to="UI/Calender" method="_on_speed_button_2_pressed"]
[connection signal="pressed" from="UI/Calender/ColorRect/SpeedButton3/SpeedButton3" to="UI/Calender" method="_on_speed_button_3_pressed"]
[connection signal="pressed" from="UI/Calender/ColorRect/PauseButton/PauseButton" to="UI/Calender" method="_on_pause_button_pressed"]
